# python-disposable

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: nightly-osint.yml  publish.yml  update-domains.yml
.maestro/: brain-sync.state  sync.state
disposable_email/: __init__.py  domains.txt  domains_custom.txt  domains_inferred.txt  domains_strict.txt
disposable_email/data/: candidates.txt  shared_infra.txt
docs/: statistics.md
scripts/: build_clusters.py  fetch_ct_candidates.py  generate_stats.py  infer_candidates.py  resolve_domains.py
tests/: test_disposable_email.py  test_osint.py
