[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disposable-email-check"
version = "1.0.0"
description = "Check if an email address or domain belongs to a disposable/temporary email service. Bundles 72k+ domains from disposable/disposable-email-domains."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["email", "disposable", "validation", "spam"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Source" = "https://github.com/disposable/disposable-email-domains"

[tool.hatch.build.targets.wheel]
packages = ["disposable_email"]

[tool.hatch.build.targets.wheel.sources]
"disposable_email" = "disposable_email"

[tool.hatch.build.targets.sdist]
include = [
    "disposable_email/",
    "README.md",
    "pyproject.toml",
]
