[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "python-disposable"
dynamic = ["version"]
description = "Check if an email address or domain belongs to a disposable/temporary email service. Bundles 72k+ domains from disposable/disposable-email-domains."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest>=7"]
keywords = ["email", "disposable", "validation", "spam"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Source" = "https://github.com/disposable/disposable-email-domains"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "disposable_email/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["disposable_email"]

[tool.hatch.build.targets.wheel.sources]
"disposable_email" = "disposable_email"

[tool.hatch.build.targets.sdist]
include = [
    "disposable_email/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
